crates/strider-analyze/tests/snapshots/v3__mips32be__calling_convention__sink16.snap
---
source: crates/strider/tests/v3_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#88cc88", label=v0, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#88cc88", label=v1, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#88cc88", label=f0, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "6" [label="init\nf2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="init\nf0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "4" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "8" -> "4" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "8" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "9" -> "8" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "10" -> "8" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "10" [label="const 0x10000003c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "9" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "7" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "11" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v12" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v12" -> "7" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "13" -> "7" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "13" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "11" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "3" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "14" -> "3" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "4" -> "3" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "14" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "15" -> "14" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "16" -> "14" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "16" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "16" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "17" -> "16" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "17" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "9" -> "17" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "18" -> "17" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "18" [label="const 0x100000038:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "15" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "19" -> "15" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "20" -> "15" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "20" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "20" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "21" -> "20" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "21" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "9" -> "21" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "22" -> "21" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "22" [label="const 0x100000034:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "19" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "23" -> "19" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "24" -> "19" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "24" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "24" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "25" -> "24" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "25" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "9" -> "25" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "26" -> "25" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "26" [label="const 0x100000030:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "23" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "27" -> "23" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "28" -> "23" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "28" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "28" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "29" -> "28" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "29" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "9" -> "29" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "30" -> "29" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "30" [label="const 0x10000002c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "27" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "31" -> "27" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "32" -> "27" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "32" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "32" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "33" -> "32" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "33" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "9" -> "33" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "34" -> "33" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "34" [label="const 0x100000028:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "31" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "35" -> "31" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "36" -> "31" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "36" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "36" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "37" -> "36" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "37" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "9" -> "37" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "38" -> "37" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "38" [label="const 0x100000024:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "35" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "39" -> "35" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "40" -> "35" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "40" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "40" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "41" -> "40" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "41" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "9" -> "41" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "42" -> "41" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "42" [label="const 0x100000020:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "39" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "43" -> "39" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "44" -> "39" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "44" [label="arg[7] ← ram[sp + 28]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "43" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "45" -> "43" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "46" -> "43" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "46" [label="arg[6] ← ram[sp + 24]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "45" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "47" -> "45" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "48" -> "45" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "48" [label="arg[5] ← ram[sp + 20]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "47" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "49" -> "47" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "50" -> "47" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "50" [label="arg[4] ← ram[sp + 16]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "49" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "51" -> "49" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "52" -> "49" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "52" [label="arg[3] ← a3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "51" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "53" -> "51" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "54" -> "51" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "54" [label="arg[2] ← a2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "53" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "55" -> "53" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "56" -> "53" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "56" [label="arg[1] ← a1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "55" [label="arg[0] ← a0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "7" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v57" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v57" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "3" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
}
